--- a/public/login.html
+++ b/public/login.html
@@ -31,6 +31,10 @@
     </form>
   </div>
 
+  <div >
+    <h3 class="gform"><a href="https://forms.gle/SHNYtWwpLqf4Mtpw6">Click here</a> to register as a Farmer</h3>
+  </div>
+
   <script>
     function handleLogin(event) {
       event.preventDefault();
