--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
   <div class="footer-content">
     <p>&copy; 2025 BazaarLink. All rights reserved.</p>
     <p>
-      <a href="contact.html">Contact</a> |
+      <a href="bazaarlink@gmail.com">Contact</a> |
       <a href="about.html">About</a> |
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="./BazaarLink_Privacy_Policy.pdf">Privacy Policy</a>
     </p>
   </div>
 </footer>
